--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,31 +1,37 @@
-<h1>Listing games</h1>
+<div class="row">
+    <div>
+        <h3>Listing games</h3>
+    </div>
+    <div class="large-12 columns">
+        <table>
+          <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Publisher</th>
+            <th>Developer</th>
+            <th>Released</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Publisher</th>
-    <th>Developer</th>
-    <th>Released</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+        <% @games.each do |game| %>
+          <tr>
+            <td><%= game.title %></td>
+            <td><%= game.description %></td>
+            <td><%= game.publisher %></td>
+            <td><%= game.developer %></td>
+            <td><%= game.released %></td>
+            <td><%= link_to 'Show', game %></td>
+            <td><%= link_to 'Edit', edit_game_path(game) %></td>
+            <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        </table>
 
-<% @games.each do |game| %>
-  <tr>
-    <td><%= game.title %></td>
-    <td><%= game.description %></td>
-    <td><%= game.publisher %></td>
-    <td><%= game.developer %></td>
-    <td><%= game.released %></td>
-    <td><%= link_to 'Show', game %></td>
-    <td><%= link_to 'Edit', edit_game_path(game) %></td>
-    <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Game', new_game_path %>
+        <br />
+        <% if user_signed_in? %>
+            <%= link_to 'New Game', new_game_path %>
+        <% end %>
+    </div>
+</div>
