--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New game</h1>
+<div class="row">
+    <header>
+        <h1>New game</h1>
+    </header>
+    <div class="large-12 columns">
+        <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', games_path %>
+        <%= link_to 'Back', games_path %>
+    </div>
+</div>
